Controle Da Garra e SIstema de Controle Manual e Merge Completo dos Projeto

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,8 @@ javac.classpath=\
     ${file.reference.javacv.jar-1}:\
     ${file.reference.opencv-2.4.8-windows-x86.jar-1}:\
     ${file.reference.opencv-2.4.8-windows-x86_64.jar-1}:\
-    ${file.reference.RXTXcomm.jar}
+    ${file.reference.RXTXcomm.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
